#15 - Fix title overlapping

--- a/src/scss/components/_components.about_me.scss
+++ b/src/scss/components/_components.about_me.scss
@@ -28,6 +28,3 @@
 		margin: 0 auto;
 	}
 }
-#resume:hover {
-    color: #9eadbc
-}
