--- a/src/scss/components/_components.general.scss
+++ b/src/scss/components/_components.general.scss
@@ -1,5 +1,5 @@
 .section-title.center {
-	padding: 30px 0;
+	padding: 4rem 0 0 0;
 	h2 {
 		font-weight: 700;
 		margin-bottom: 30px;
